{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 15,
  "lineage": "2ca98350-15a3-8671-d20f-749a18fa1790",
  "resources": [
    {
      "module": "module.ecs_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:279155680798:security-group/sg-0452c9cade2f0d733",
            "description": "Security Group managed by Terraform",
            "egress": [],
            "id": "sg-0452c9cade2f0d733",
            "ingress": [],
            "name": "ingress-container-instance",
            "name_prefix": "",
            "owner_id": "279155680798",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "ingress-container-instance",
              "Owner": "Xebia"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "ingress-container-instance",
              "Owner": "Xebia"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f91af67f56254f48"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "instance_out_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3780255885",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0452c9cade2f0d733",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs_cluster.aws_security_group.instance"
          ]
        }
      ]
    }
  ]
}